  \_/  \___(_)_/     |_|          (unreleased)


General:
 * Fix a failure with Perl 5.40.
 * Remove DynaLoader (GitHub's #532) [gemmaro].

TeX:
 * Fix read error of input/include files in TeX files (thanks Alex Karabanov)
 * latex: Fix a failure when \input is surrounded with {curly braces}.
   Thanks to Mayeul Cantan for the report and fix, and to Alex Karabanov
   for the test case.

Org:
 * New module (GitHub's #485) [gemmaro].

Translations:
 * New translation: Romanian, thanks to Remus-Gabriel Chelu.
 * Updated: Chinese (Traditional), thanks Ricky From Hong Kong.
 * Updated: Dutch, thanks Frans Spiesschaert and Henk De Groot.
 * Updated: Georgian, thanks Temuri Doghonadze.
 * Updated: German, thanks Helge Kreutzmann.
 * Updated: Italian, thanks Marco Ciampa.
 * Updated: Japanese, thanks gemmaro.
 * Updated: Russian, thanks Alex Karabanov.
 * Updated: Serbian, thanks Ivan Pesic.
 * Updated: Spanish, thanks gallegonovato and Francisco Serrador.
 * Updated: Portuguese (Brazil), thanks Rafael Fontenelle.
 * Updated: Portuguese, thanks ssantos.

=======================================================================
        ___  _____ _____
__   __/ _ \|___  |___ /
\ \ / / | | |  / /  |_ \          The Cassini release.
 \ V /| |_| | / /  ___) |
  \_/  \___(_)_/  |____/          June 17. 2024.
  
César-François Cassini de Thury was born 310 years ago, and then made
a bunch of nice-looking topographic maps of France and around.

General:
 * Try to not fail when writing UTF po files with old Perl versions
   (GitHub's #495) [Ineiev].
 * Improve various error messages to help users debugging encoding issues.

   The thing is that po4a v0.70 and later is much more picky about encodings.
   Before, it was relying on the default Perl behavior to do "the right thing",
   happily parsing latin-1 or UTF-8 files and converting to the Perl internal
   string representation. The drawback was that this setup forced po4a to