@@ -1,0 +1,4 @@
+This is a URL.[^1]
+
+[^1]: URL stands for
+      Uniform Resource Locator.
