@@ -1,0 +1,4 @@
+THIS IS A URL.[^1]
+
+[^1]: URL STANDS FOR
+      UNIFORM RESOURCE LOCATOR.
