@@ -19,6 +19,9 @@ TeX:
    Thanks to Mayeul Cantan for the report and fix, and to Alex Karabanov
    for the test case.
 
+Markdown:
+ * Support multiline footnote option (GitHub's #536) [gemmaro].
+
 Org:
  * New module (GitHub's #485) [gemmaro].
 
